Fix image display wrapper in current preview not overflow bounds

--- a/frontend/src/features/gallery/components/CurrentImageDisplay.scss
+++ b/frontend/src/features/gallery/components/CurrentImageDisplay.scss
@@ -22,6 +22,7 @@
     object-fit: contain;
     max-width: 100%;
     max-height: 100%;
+    width: max-content;
     height: auto;
     position: absolute;
   }
